mobile z-index issue

--- a/components/ChartPage/Measure.module.scss
+++ b/components/ChartPage/Measure.module.scss
@@ -135,7 +135,6 @@ $red-lane: rgba(246, 175, 176, 0.2);
 
     .BpmEvent {
       position: absolute;
-      z-index: 0;
 
       &.initial {
         color: rgb(60, 60, 60);
